# PercentageSandbox

./: .gitignore  CMakeLists.txt  README.md
build_dependencies/include/: box_drawer.h
build_dependencies/src/: box_drawer.cpp
include/: definitions.h  descriptions.h  libraries.h  macros.h
src/: main.cpp  tests.cpp
